# siesta

./: .bzrignore  .gitattributes  .gitignore  .gitmodules  000_INSTALL  00_AEMD_README  AUTHORS  BRANCH_INFO  CMakeLists.txt  ChangeLog.md  Copyright.stub  Doxyfile  INSTALL  INSTALL.CMake  INSTALL.CMake.md  Makefile  NOTICE.txt  README  README.md  README_ELSI  README_LINRES_LIBXC  README_OMM  README_PSML  RELEASE_NOTES  ReleaseNotes.md  SIESTA.release  SIESTA_vgen.sh  TO_DO.md  ToDo-GPL  build_dirty.sh  cleanup.sh  m_pexsi_driver.F90  stage_submodules.sh  version.info
Pseudo/vnl-operator/: CMakeLists.txt  Makefile  handlers.f  psop.f90
Src/: CMakeLists.txt  Makefile  SIESTA_cmake_vgen.sh  alloc.F90  alloc_handlers_m.F90  alloc_memory_event.F  amn.F90  arch.make  arch.make.in  arw.f  atm_generation_types.f90  atm_transfer.f  atm_types.F90  atm_types.f  atmfuncs.f  atmfuncs.f90  atmfuncs_types.f90  atmparams.f  atmparams.f90  atom.F  atom.f  atom.f90  atom_basis_enthalpy.f90  atom_basis_gen.f90  atom_basis_io.F90  atom_basis_specs.f90  atom_basis_types.f  atom_bessel.f90  atom_corecharge.f90  atom_elec_correction.f90  atom_generation_types.f90  atom_graph.F90  atom_kb.f90  atom_multiple_z.f90  atom_na.f90  atom_options.F90  atom_pao_util.f90  atom_pol_orb.f90  atom_types.F90  atom_vloc.f90  (+590 more)
Src/Confs/: arina-mpi.conf  arina-serial.conf  g95-cdf.conf  intel9mkl8-safe.conf  macosx-nag-cdf.conf  matterhorn-gm.conf  matterhorn-serial.conf  pegasus-mpi.conf
Src/Include/: constr.f
Src/Libs/: Makefile  README  blas.F  lapack.F  lapack_add.files  makefile
Src/MPI/: CMakeLists.txt  Makefile  generate.sh  int_explorer.f90  kind_explorer.f90  mpi__type_s.f90  mpi__type_v.f90  mpi_siesta.F90  timer_mpi.f90
Src/Old_ELPA/: rdiag_elpa.F
Src/SiestaXC/: CMakeLists.txt  cellxc.F90  ggaxc.F  ggaxc.f  ldaxc.F  local_sys.F  makefile  sys.F  xcmod.F90
Src/Sys/: DOCUMENTED-TEMPLATE.make  arina-mlib.make  compaq-mpi.make  cscs-cray-mpi.make  cscs-cray.make  cscs-ibm-blanc.make  darwin.make  finisterrae.make  g95-nolibs.make  gfortran-netcdf.make  gfortran.make  hpcx.make  ibm-regatta-p4.make  ibmp3-mpi.make  ibmp3.make  icmab-snake-mpi.make  ifort-netcdf.make  intel-checks.make  intel-mkl.make  intel-nolibs.make  intel9-mkl8.make  itanium2-mpi.make  itanium2.make  macosx-gfortran64-atlas.make  macosx-nag-mpi.make  macosx-nag.make  macosx-xlf.make  nano-intel-mpi-cdf.make  nano-intel-mpi.make  nano-intel-serial.make  nano-pgf95-serial.make  nolibs.make  pathscale-mpi.make  pathscale.make  pgf95-macosx32.make  pgf95-matterhorn-gm.make  pgf95-matterhorn-mpich.make  pgf95-matterhorn-serial.make
Src/Wannier90/: Makefile  comms.F90  disentangle.F90  hamiltonian.F90  io_proj.F90  kmesh_proj.F90  makefile  overlap.F90  parameters.F90  plot.F90  ws_distance.F90
Src/easy-fdict/: CMakeLists.txt  makefile  variable.F90
Src/easy-ncdf/: CMakeLists.txt  makefile  netcdf_ncdf.F90
Src/fdf/: .gitignore  .gitrepo  .mailmap  .update-copyright.conf  CMakeLists.txt  LICENSE  README  README.md  autogen.sh  fdf.F90  fdf.Standard  makefile  quickcheck.sh  utils.F90  wipeout.sh
Src/libsys/: CMakeLists.txt  external_entries.f90  makefile  sys.F90
Src/nvtx-profiling/: nvtx_wrapper.F90
Src/simple-fdict/: CMakeLists.txt  dictionary.f90  variable.f90
Src/simple-ncdf/: CMakeLists.txt
Src/units/: CMakeLists.txt  README.md  makefile  units.F90  units.py  units_codata2018.f90  units_common.f90  units_legacy.f90
Src/wannier/: CMakeLists.txt  broadcast_projections.F  m_noccbands.f  m_orderbands.F  m_planewavematrixvar.F90  m_trialorbitalclass.f90  m_w90_in_siesta.F90  m_wannier_in_nao.F90  reordpsi.F  w90_in_types.f  wannier90_types.f  write_inp_wannier.F90
Src/wxml/: CMakeLists.txt  flib_wcml.f90  flib_wstml.f90  flib_wxml.f90  m_wcml_coma.f90  m_wxml_array_str.f90  m_wxml_buffer.f90  m_wxml_core.f90  m_wxml_dictionary.f90  m_wxml_elstack.f90  m_wxml_error.f90  m_wxml_escape.f90  m_wxml_overloads.f90  makefile
Src/xmlparser/: CMakeLists.txt  LICENSE  NOTICE.txt  compare_m.f90  corresponding_node.f90  flib_dom.f90  flib_sax.f90  list_nodes.f90  m_buffer.f90  m_charset.f90  m_compare_tol.f90  m_converters.f90  m_debug.f90  m_dictionary.f90  m_dom_attribute.f90  m_dom_debug.f90  m_dom_document.f90  m_dom_element.f90  m_dom_error.f90  m_dom_namednodemap.f90  m_dom_node.f90  m_dom_nodelist.f90  m_dom_parse.f90  m_dom_types.f90  m_dom_utils.f90  m_elstack.f90  m_entities.f90  m_fsm.f90  m_getopts.f90  m_io.f90  m_io_xmlparser.f90  m_reader.f90  m_strings.f90  m_xml_error.f90  m_xml_parser.f90  makefile  string_utilities.f90  test.f90  xml-pseudopotential.f
Util/: CMakeLists.txt  COPYING  README  clean_all.sh  vpsa2bin.f  vpsb2asc.f
Util/Bands/: CMakeLists.txt  Makefile  eigfat2plot.f90  gnubands.f  gnubands.f90  new.gnubands.f90
Util/COOP/: CMakeLists.txt  Makefile  dm_creator.F90  fat.f90  fat_atomic.f90  io.f  io_hs.f90  iodm_netcdf.F90  local_timer.f90  m_getopts.f90  main_vars.f90  mprop.f90  orbital_set.f90  read_curves.f90  subs.f90  sys_local.f90  units.f90  write_dm.f
Util/Contour/: CMakeLists.txt  Makefile  grid1d.f  grid2d.f
Util/DensityMatrix/: CMakeLists.txt  cdf2dm.F90  dm2cdf.F90  dmUnblock.F90  dmbs2dm.F90  dmfilter.f90  makefile
Util/Eig2DOS/: CMakeLists.txt  Eig2DOS.f90  Makefile  original.eig2dos.f
Util/Gen-basis/: CMakeLists.txt  Makefile  gen-basis.F  handlers.f  ioncat.f  ionplot.sh  local_die.F  local_die.f  local_sys.f
Util/Grid/: CMakeLists.txt  cdf2grid.F90  cdf2xsf.F90  cdf_diff.F90  cdf_fft.F90  cdf_get_cell.F90  cdfget.F90  grid2cdf.F90  grid2cube.f  grid2val.F  libfft.f  m_grid.F90  m_struct.F90  makefile  v_info.F90  v_info.f90
Util/Grimme/: CMakeLists.txt  Makefile  grimme.f90  local_timer.f90
Util/HSX/: CMakeLists.txt  hs2hsx.f90  hsx2hs.f90  hsx_m.f90  iohs.F  makefile
Util/Helpers/: CMakeLists.txt  Makefile  get_chem_labels.f90  local_timer.f90
Util/MPI_test/: CMakeLists.txt  Makefile  blacs_prb.f90  mpi_test.F90  pblas_prb.f90
Util/ON/: CMakeLists.txt  lwf2cdf.F90  makefile
Util/Optical/: CMakeLists.txt  Makefile  README  input.f  optical.f  (+2 more)
(+959 files in other folders)
