# Utilities

  add_subdirectory("TS/TBtrans")
  add_subdirectory("TS/tscontour")
  add_subdirectory("TS/ts2ts")
  add_subdirectory("TS/tshs2tshs")
  add_subdirectory("Contour")
  add_subdirectory("Gen-basis")
  add_subdirectory("Eig2DOS")
  add_subdirectory("COOP")
  add_subdirectory("Vibra/Src")
  add_subdirectory("Denchar/Src")
  add_subdirectory("DensityMatrix")
  add_subdirectory("Bands")
  add_subdirectory("Grid")
  add_subdirectory("Grimme")
  add_subdirectory("Helpers")
  add_subdirectory("HSX")
  add_subdirectory("WFS")
  add_subdirectory("VCA")
  add_subdirectory("Macroave/Src")
  add_subdirectory("ON")
  add_subdirectory("Optical")
  add_subdirectory("Optimizer")
  add_subdirectory("Projections")
  add_subdirectory("pdosxml")
  add_subdirectory("SpPivot")
  add_subdirectory("Unfolding/Src")
  add_subdirectory("STM/simple-stm")
  add_subdirectory("Sockets")
  add_subdirectory("SiestaSubroutine/SimpleTest/Src")
  add_subdirectory("SiestaSubroutine/FmixMD/Src")
  add_subdirectory("SiestaSubroutine/ProtoNEB/Src")
  add_subdirectory("sies2arc")

if(FFTW_DOUBLE_LIB_FOUND)
  add_subdirectory("STM/ol-stm/Src")
else()
  message(WARNING "Util/STM/ol-stm will not be built for lack of FFTW support")
endif()
